<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstText"
            android:layout_width="335dp"
            android:layout_height="74dp"
            app:layout_constraintBottom_toTopOf="@+id/secondText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.485"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.57">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstTextEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Primer texto" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/secondText"
            android:layout_width="339dp"
            android:layout_height="83dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toTopOf="@+id/compareButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.44"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstText"
            app:layout_constraintVertical_bias="0.68">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/secondTextEdit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Segundo Texto"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/compareButton"
            android:layout_width="340dp"
            android:layout_height="61dp"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:background="@color/purple_500"
            android:text="Compare"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/secondText" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="112dp"
            android:layout_height="49dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compareButton"
            app:layout_constraintVertical_bias="0.415" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>